change character-speed and stops to jump

--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@ canvas {
                 -8px 8px 8px 0 #ffffff75 inset,
                 8px -8px 8px 0 #ffffff75 inset,
                 -8px -8px 8px 0 #ffffff75 inset;
+    display: block;
+    
 }
 
 .rahmen {
@@ -172,6 +174,24 @@ a {
     bottom: 3%;
 }
 
+/* ################################################################################ */
+/* ################################################################################ */
+/* ################################################################################ */
+@media only screen and (max-width: 720px) {
+    canvas {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-height: 480px) {
+    canvas {
+        height: 80vh;
+    }
+
+    .fullpage div {
+        display: flex;
+    }
+}
 
 
 
